# projet_Arkanoid

./: CMakeLists.txt
include/: gameState.h  globals.h  init.h  laser.h  menu.h  physics.h  powerup.h  render.h  score.h
levels/: level1.txt  level2.txt  level3.txt  level4.txt  level5.txt
src/: gameState.c  globals.c  init.c  laser.c  main.c  menu.c  physics.c  powerup.c  render.c  score.c
